# quizme-buddy

./: .env.example  .gitignore  GEMINI.md  README.md  SECURITY.md  pyproject.toml
src/: main-prepare-quiz.py
src/_modules/: utility_openai.py  utility_pdfs_images.py
